# chess-flashcards

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  requirements.txt
requirements/: base.txt  dev.txt
src/: app.py  auth.py  chess_utils.py  config.py  db.py  download.py  download_utils.py  get_time.py  models.py  process_games.py  routes.py  run.py  server.py
src/puzzle_generator/: db.py  generate_puzzles.py  lichess_api.py  puzzle_db.py  time_utils.py
static/css/: output.css
static/js/: puzzle-script.js
templates/: alert.html  base.html  index.html  login.html  profile.html  puzzle-page.html  register.html
tests/: test_chess_utils.py  test_generate_puzzles.py  test_get_time.py  test_process_games.py  test_time_utils.py
views/: index.html  puzzle-page.html
